2012-12-5 Ivan Kartolo <ivan@kartolo.de>
	* Bug #38905: background image from table, tr or td tag can now be embedded in the newsletter
	* Bug #41536: bug fix on using the domain for internal links

2012-11-11 Ivan Kartolo <ivan@kartolo.de>
	* Bug #39883: using getURL to fetch attachment and embedded media
	* Bug #42107: don't set ReplyTo if it's empty

2012-10-04 Ivan Kartolo <ivan@kartolo.de>
	* Bug #39422: fixed dmailerping not counted in statistic module

2012-07-11 Ivan Kartolo <ivan@kartolo.de>
	* Bug #37781: added bounce reason
	* Bug #37989: fixed file operation permission for non-admin in importer

2012-07-04 Ivan Kartolo <ivan@kartolo.de>
	* Bug #38003: hide query editor if user doesn't have right to the recipient table
	* Bug #38232: fixed fetching included media from the wrong FE path

2012-07-01 Ivan Kartolo <ivan@kartolo.de>
	* Bug #38479: fixed recursively added media (thx to Tom)
	* Bug #38003: remove the edit link of recipient list, if the user doesn't have the right to the table

2012-06-08 Ivan Kartolo <ivan@kartolo.de>
	* Bug #37821: fixed utf-8 problem in subject

2012-06-06 Ivan Kartolo <ivan@kartolo.de>
	* remove deprecated dmailer.phpsh

2012-06-04 Ivan Kartolo <ivan@kartolo.de>
	* Bug #31054: fix compiling recipient from fe_groups. module_sys_dmail_newsletter was ignored

2012-06-01 Ivan Kartolo <ivan@kartolo.de>
	* Feature #33507: check if DAM loaded, then add media parseFunc
	* Feature #31753: also show statistics from external URL newsletter

2012-05-28 Ivan Kartolo <ivan@kartolo.de>
	* Doc #37526: added upgrade notice to version 3.0.0

2012-05-23 Ivan Kartolo <ivan@kartolo.de>
	* Bug #27975: fix linking in the statistics module.

2012-05-21 Ivan Kartolo <ivan@kartolo.de>
	* Bug #27633: use from address if reply-to is not set

2012-05-20 Ivan Kartolo <ivan@kartolo.de>
	* fix rdct Link in plain text

2012-05-10 Ivan Kartolo <ivan@kartolo.de>