@@ -1,4 +1,7 @@
-2012-12-5 Ivan Kartolo <ivan@kartolo.de>
+2012-12-09 Ivan Kartolo <iva@kartolo.de>
+	* Bug #41340: fixed recipient header if no name is given
+
+2012-12-05 Ivan Kartolo <ivan@kartolo.de>
 	* Bug #38905: background image from table, tr or td tag can now be embedded in the newsletter
 	* Bug #41536: bug fix on using the domain for internal links
 
